Fix css main overflow

--- a/docs/_sass/styles.scss
+++ b/docs/_sass/styles.scss
@@ -573,6 +573,7 @@ a {
 main {
   word-wrap: break-word;
   min-height: 100%;
+  overflow: hidden;
 
   //:first-child {
   //  margin-top: 0;
